<resources>
    <string name="app_name">DemoChatApplication</string>
    <string name="ChatOnline">Chat Online</string>
    <string name="sign_in">Login In</string>
    <string name="sign_up">Resister Now</string>
    <string name="network_detection_error">No Active Internet Connection</string>
    <string name="username_input_error">Please Enter Username</string>
    <string name="password_input_error">Please Enter Password</string>
    <string name="phone_permission">Phone</string>
    <string name="storage_permission">Storage</string>
    <string name="permission_alert">Permission Required</string>
    <string name="permission_message">Permission is required for App to function properly.
        Please enable through Settings.</string>
    <string name="search">search</string>
    <string name="chat">chat</string>
    <string name="settings">Settings</string>
    <string name="profile">View Profile</string>
    <string name="options">more</string>
    <string name="logout">Logout</string>
    <string name="status">available</string>
    <string name="guest">Guest</string>
    <string name="message">status</string>
    <string name="call">call</string>
    <string name="video">video</string>
</resources>
