<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/chat"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/chat"
        app:showAsAction="always"/>

    <item
        android:id="@+id/video"
        android:icon="@android:drawable/presence_video_online"
        android:title="@string/video"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/call"
        android:icon="@android:drawable/stat_sys_phone_call"
        android:title="@string/call"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_bar_menu_view_profile"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/profile"
        app:showAsAction="never"/>
</menu>